compiler/parser.output
Terminals unused in grammar

    AND
    OR
    NOT


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: func_decl
    5     | var_decl

    6 func_decl: INT IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list RBRACE
    7          | VOID IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list RBRACE
    8          | INT IDENTIFIER LPAREN RPAREN LBRACE stmt_list RBRACE

    9 param_list: param_list COMMA param
   10           | param

   11 param: INT IDENTIFIER
   12      | FLOAT_TYPE IDENTIFIER

   13 var_decl: INT IDENTIFIER SEMICOLON
   14         | INT IDENTIFIER ASSIGN expr SEMICOLON
   15         | FLOAT_TYPE IDENTIFIER ASSIGN expr SEMICOLON
   16         | FLOAT_TYPE IDENTIFIER SEMICOLON

   17 stmt_list: stmt_list stmt
   18          | %empty

   19 stmt: var_decl
   20     | assign_stmt
   21     | if_stmt
   22     | while_stmt
   23     | return_stmt
   24     | expr SEMICOLON

   25 assign_stmt: IDENTIFIER ASSIGN expr SEMICOLON

   26 if_stmt: IF LPAREN condition RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   27        | IF LPAREN condition RPAREN LBRACE stmt_list RBRACE

   28 while_stmt: WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE

   29 return_stmt: RETURN expr SEMICOLON
   30            | RETURN SEMICOLON

   31 condition: expr LT expr
   32          | expr GT expr
   33          | expr EQ expr
   34          | expr NEQ expr
   35          | expr LEQ expr
   36          | expr GEQ expr

   37 expr: expr PLUS term
   38     | expr MINUS term
   39     | term

   40 term: term MULTIPLY factor
   41     | term DIVIDE factor
   42     | factor

   43 factor: NUMBER
   44       | FLOAT_NUM
   45       | IDENTIFIER
   46       | LPAREN expr RPAREN
   47       | MINUS factor


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT (258) 6 8 11 13 14
    FLOAT_TYPE (259) 12 15 16
    VOID (260) 7
    IF (261) 26 27
    ELSE (262) 26
    WHILE (263) 28
    RETURN (264) 29 30
    NUMBER <ival> (265) 43
    FLOAT_NUM <fval> (266) 44
    IDENTIFIER <sval> (267) 6 7 8 11 12 13 14 15 16 25 45
    PLUS (268) 37
    MINUS (269) 38 47
    MULTIPLY (270) 40
    DIVIDE (271) 41
    ASSIGN (272) 14 15 25
    EQ (273) 33
    NEQ (274) 34
    LT (275) 31
    GT (276) 32
    LEQ (277) 35
    GEQ (278) 36
    AND (279)
    OR (280)
    NOT (281)
    LPAREN (282) 6 7 8 26 27 28 46
    RPAREN (283) 6 7 8 26 27 28 46
    LBRACE (284) 6 7 8 26 27 28
    RBRACE (285) 6 7 8 26 27 28
    SEMICOLON (286) 13 14 15 16 24 25 29 30
    COMMA (287) 9
    UMINUS (288)


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    program (35)
        on left: 1
        on right: 0
    decl_list (36)
        on left: 2 3
        on right: 1 2
    decl (37)
        on left: 4 5
        on right: 2 3
    func_decl (38)
        on left: 6 7 8
        on right: 4
    param_list (39)
        on left: 9 10
        on right: 6 7 9
    param (40)
        on left: 11 12
        on right: 9 10
    var_decl (41)
        on left: 13 14 15 16
        on right: 5 19
    stmt_list (42)
        on left: 17 18
        on right: 6 7 8 17 26 27 28
    stmt (43)
        on left: 19 20 21 22 23 24
        on right: 17
    assign_stmt (44)
        on left: 25
        on right: 20
    if_stmt (45)
        on left: 26 27
        on right: 21
    while_stmt (46)
        on left: 28
        on right: 22
    return_stmt (47)
        on left: 29 30
        on right: 23
    condition <sval> (48)
        on left: 31 32 33 34 35 36
        on right: 26 27 28
    expr <sval> (49)
        on left: 37 38 39
        on right: 14 15 24 25 29 31 32 33 34 35 36 37 38 46
    term <sval> (50)
        on left: 40 41 42
        on right: 37 38 39 40 41
    factor <sval> (51)
        on left: 43 44 45 46 47
        on right: 40 41 42 47


State 0

    0 $accept: . program $end

    INT         shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    VOID        shift, and go to state 3

    program    go to state 4
    decl_list  go to state 5
    decl       go to state 6
    func_decl  go to state 7
    var_decl   go to state 8


State 1

    6 func_decl: INT . IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list RBRACE
    8          | INT . IDENTIFIER LPAREN RPAREN LBRACE stmt_list RBRACE
   13 var_decl: INT . IDENTIFIER SEMICOLON
   14         | INT . IDENTIFIER ASSIGN expr SEMICOLON

    IDENTIFIER  shift, and go to state 9


State 2

   15 var_decl: FLOAT_TYPE . IDENTIFIER ASSIGN expr SEMICOLON
   16         | FLOAT_TYPE . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 10


State 3

    7 func_decl: VOID . IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list RBRACE

    IDENTIFIER  shift, and go to state 11


State 4

    0 $accept: program . $end

    $end  shift, and go to state 12


State 5

    1 program: decl_list .
    2 decl_list: decl_list . decl

    INT         shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    VOID        shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl       go to state 13
    func_decl  go to state 7
    var_decl   go to state 8


State 6

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


State 7

    4 decl: func_decl .

    $default  reduce using rule 4 (decl)


State 8

    5 decl: var_decl .

    $default  reduce using rule 5 (decl)


State 9

    6 func_decl: INT IDENTIFIER . LPAREN param_list RPAREN LBRACE stmt_list RBRACE
    8          | INT IDENTIFIER . LPAREN RPAREN LBRACE stmt_list RBRACE
   13 var_decl: INT IDENTIFIER . SEMICOLON
   14         | INT IDENTIFIER . ASSIGN expr SEMICOLON

    ASSIGN     shift, and go to state 14
    LPAREN     shift, and go to state 15
    SEMICOLON  shift, and go to state 16


State 10

   15 var_decl: FLOAT_TYPE IDENTIFIER . ASSIGN expr SEMICOLON
   16         | FLOAT_TYPE IDENTIFIER . SEMICOLON

    ASSIGN     shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 11

    7 func_decl: VOID IDENTIFIER . LPAREN param_list RPAREN LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 19


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


State 14

   14 var_decl: INT IDENTIFIER ASSIGN . expr SEMICOLON

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 25
    term    go to state 26
    factor  go to state 27


State 15

    6 func_decl: INT IDENTIFIER LPAREN . param_list RPAREN LBRACE stmt_list RBRACE
    8          | INT IDENTIFIER LPAREN . RPAREN LBRACE stmt_list RBRACE

    INT         shift, and go to state 28
    FLOAT_TYPE  shift, and go to state 29
    RPAREN      shift, and go to state 30

    param_list  go to state 31
    param       go to state 32


State 16

   13 var_decl: INT IDENTIFIER SEMICOLON .

    $default  reduce using rule 13 (var_decl)


State 17

   15 var_decl: FLOAT_TYPE IDENTIFIER ASSIGN . expr SEMICOLON

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 33
    term    go to state 26
    factor  go to state 27


State 18

   16 var_decl: FLOAT_TYPE IDENTIFIER SEMICOLON .

    $default  reduce using rule 16 (var_decl)


State 19

    7 func_decl: VOID IDENTIFIER LPAREN . param_list RPAREN LBRACE stmt_list RBRACE

    INT         shift, and go to state 28
    FLOAT_TYPE  shift, and go to state 29

    param_list  go to state 34
    param       go to state 32


State 20

   43 factor: NUMBER .

    $default  reduce using rule 43 (factor)


State 21

   44 factor: FLOAT_NUM .

    $default  reduce using rule 44 (factor)


State 22

   45 factor: IDENTIFIER .

    $default  reduce using rule 45 (factor)


State 23

   47 factor: MINUS . factor

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    factor  go to state 35


State 24

   46 factor: LPAREN . expr RPAREN

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 36
    term    go to state 26
    factor  go to state 27


State 25

   14 var_decl: INT IDENTIFIER ASSIGN expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS       shift, and go to state 37
    MINUS      shift, and go to state 38
    SEMICOLON  shift, and go to state 39


State 26

   39 expr: term .
   40 term: term . MULTIPLY factor
   41     | term . DIVIDE factor

    MULTIPLY  shift, and go to state 40
    DIVIDE    shift, and go to state 41

    $default  reduce using rule 39 (expr)


State 27

   42 term: factor .

    $default  reduce using rule 42 (term)


State 28

   11 param: INT . IDENTIFIER

    IDENTIFIER  shift, and go to state 42


State 29

   12 param: FLOAT_TYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 43


State 30

    8 func_decl: INT IDENTIFIER LPAREN RPAREN . LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 44


State 31

    6 func_decl: INT IDENTIFIER LPAREN param_list . RPAREN LBRACE stmt_list RBRACE
    9 param_list: param_list . COMMA param

    RPAREN  shift, and go to state 45
    COMMA   shift, and go to state 46


State 32

   10 param_list: param .

    $default  reduce using rule 10 (param_list)


State 33

   15 var_decl: FLOAT_TYPE IDENTIFIER ASSIGN expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS       shift, and go to state 37
    MINUS      shift, and go to state 38
    SEMICOLON  shift, and go to state 47


State 34

    7 func_decl: VOID IDENTIFIER LPAREN param_list . RPAREN LBRACE stmt_list RBRACE
    9 param_list: param_list . COMMA param

    RPAREN  shift, and go to state 48
    COMMA   shift, and go to state 46


State 35

   47 factor: MINUS factor .

    $default  reduce using rule 47 (factor)


State 36

   37 expr: expr . PLUS term
   38     | expr . MINUS term
   46 factor: LPAREN expr . RPAREN

    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    RPAREN  shift, and go to state 49


State 37

   37 expr: expr PLUS . term

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    term    go to state 50
    factor  go to state 27


State 38

   38 expr: expr MINUS . term

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    term    go to state 51
    factor  go to state 27


State 39

   14 var_decl: INT IDENTIFIER ASSIGN expr SEMICOLON .

    $default  reduce using rule 14 (var_decl)


State 40

   40 term: term MULTIPLY . factor

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    factor  go to state 52


State 41

   41 term: term DIVIDE . factor

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    factor  go to state 53


State 42

   11 param: INT IDENTIFIER .

    $default  reduce using rule 11 (param)


State 43

   12 param: FLOAT_TYPE IDENTIFIER .

    $default  reduce using rule 12 (param)


State 44

    8 func_decl: INT IDENTIFIER LPAREN RPAREN LBRACE . stmt_list RBRACE

    $default  reduce using rule 18 (stmt_list)

    stmt_list  go to state 54


State 45

    6 func_decl: INT IDENTIFIER LPAREN param_list RPAREN . LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 55


State 46

    9 param_list: param_list COMMA . param

    INT         shift, and go to state 28
    FLOAT_TYPE  shift, and go to state 29

    param  go to state 56


State 47

   15 var_decl: FLOAT_TYPE IDENTIFIER ASSIGN expr SEMICOLON .

    $default  reduce using rule 15 (var_decl)


State 48

    7 func_decl: VOID IDENTIFIER LPAREN param_list RPAREN . LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 57


State 49

   46 factor: LPAREN expr RPAREN .

    $default  reduce using rule 46 (factor)


State 50

   37 expr: expr PLUS term .
   40 term: term . MULTIPLY factor
   41     | term . DIVIDE factor

    MULTIPLY  shift, and go to state 40
    DIVIDE    shift, and go to state 41

    $default  reduce using rule 37 (expr)


State 51

   38 expr: expr MINUS term .
   40 term: term . MULTIPLY factor
   41     | term . DIVIDE factor

    MULTIPLY  shift, and go to state 40
    DIVIDE    shift, and go to state 41

    $default  reduce using rule 38 (expr)


State 52

   40 term: term MULTIPLY factor .

    $default  reduce using rule 40 (term)


State 53

   41 term: term DIVIDE factor .

    $default  reduce using rule 41 (term)


State 54

    8 func_decl: INT IDENTIFIER LPAREN RPAREN LBRACE stmt_list . RBRACE
   17 stmt_list: stmt_list . stmt

    INT         shift, and go to state 58
    FLOAT_TYPE  shift, and go to state 2
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    RETURN      shift, and go to state 61
    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 62
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24
    RBRACE      shift, and go to state 63

    var_decl     go to state 64
    stmt         go to state 65
    assign_stmt  go to state 66
    if_stmt      go to state 67
    while_stmt   go to state 68
    return_stmt  go to state 69
    expr         go to state 70
    term         go to state 26
    factor       go to state 27


State 55

    6 func_decl: INT IDENTIFIER LPAREN param_list RPAREN LBRACE . stmt_list RBRACE

    $default  reduce using rule 18 (stmt_list)

    stmt_list  go to state 71


State 56

    9 param_list: param_list COMMA param .

    $default  reduce using rule 9 (param_list)


State 57

    7 func_decl: VOID IDENTIFIER LPAREN param_list RPAREN LBRACE . stmt_list RBRACE

    $default  reduce using rule 18 (stmt_list)

    stmt_list  go to state 72


State 58

   13 var_decl: INT . IDENTIFIER SEMICOLON
   14         | INT . IDENTIFIER ASSIGN expr SEMICOLON

    IDENTIFIER  shift, and go to state 73


State 59

   26 if_stmt: IF . LPAREN condition RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   27        | IF . LPAREN condition RPAREN LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 74


State 60

   28 while_stmt: WHILE . LPAREN condition RPAREN LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 75


State 61

   29 return_stmt: RETURN . expr SEMICOLON
   30            | RETURN . SEMICOLON

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24
    SEMICOLON   shift, and go to state 76

    expr    go to state 77
    term    go to state 26
    factor  go to state 27


State 62

   25 assign_stmt: IDENTIFIER . ASSIGN expr SEMICOLON
   45 factor: IDENTIFIER .

    ASSIGN  shift, and go to state 78

    $default  reduce using rule 45 (factor)


State 63

    8 func_decl: INT IDENTIFIER LPAREN RPAREN LBRACE stmt_list RBRACE .

    $default  reduce using rule 8 (func_decl)


State 64

   19 stmt: var_decl .

    $default  reduce using rule 19 (stmt)


State 65

   17 stmt_list: stmt_list stmt .

    $default  reduce using rule 17 (stmt_list)


State 66

   20 stmt: assign_stmt .

    $default  reduce using rule 20 (stmt)


State 67

   21 stmt: if_stmt .

    $default  reduce using rule 21 (stmt)


State 68

   22 stmt: while_stmt .

    $default  reduce using rule 22 (stmt)


State 69

   23 stmt: return_stmt .

    $default  reduce using rule 23 (stmt)


State 70

   24 stmt: expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS       shift, and go to state 37
    MINUS      shift, and go to state 38
    SEMICOLON  shift, and go to state 79


State 71

    6 func_decl: INT IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list . RBRACE
   17 stmt_list: stmt_list . stmt

    INT         shift, and go to state 58
    FLOAT_TYPE  shift, and go to state 2
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    RETURN      shift, and go to state 61
    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 62
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24
    RBRACE      shift, and go to state 80

    var_decl     go to state 64
    stmt         go to state 65
    assign_stmt  go to state 66
    if_stmt      go to state 67
    while_stmt   go to state 68
    return_stmt  go to state 69
    expr         go to state 70
    term         go to state 26
    factor       go to state 27


State 72

    7 func_decl: VOID IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list . RBRACE
   17 stmt_list: stmt_list . stmt

    INT         shift, and go to state 58
    FLOAT_TYPE  shift, and go to state 2
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    RETURN      shift, and go to state 61
    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 62
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24
    RBRACE      shift, and go to state 81

    var_decl     go to state 64
    stmt         go to state 65
    assign_stmt  go to state 66
    if_stmt      go to state 67
    while_stmt   go to state 68
    return_stmt  go to state 69
    expr         go to state 70
    term         go to state 26
    factor       go to state 27


State 73

   13 var_decl: INT IDENTIFIER . SEMICOLON
   14         | INT IDENTIFIER . ASSIGN expr SEMICOLON

    ASSIGN     shift, and go to state 14
    SEMICOLON  shift, and go to state 16


State 74

   26 if_stmt: IF LPAREN . condition RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   27        | IF LPAREN . condition RPAREN LBRACE stmt_list RBRACE

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    condition  go to state 82
    expr       go to state 83
    term       go to state 26
    factor     go to state 27


State 75

   28 while_stmt: WHILE LPAREN . condition RPAREN LBRACE stmt_list RBRACE

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    condition  go to state 84
    expr       go to state 83
    term       go to state 26
    factor     go to state 27


State 76

   30 return_stmt: RETURN SEMICOLON .

    $default  reduce using rule 30 (return_stmt)


State 77

   29 return_stmt: RETURN expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS       shift, and go to state 37
    MINUS      shift, and go to state 38
    SEMICOLON  shift, and go to state 85


State 78

   25 assign_stmt: IDENTIFIER ASSIGN . expr SEMICOLON

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 86
    term    go to state 26
    factor  go to state 27


State 79

   24 stmt: expr SEMICOLON .

    $default  reduce using rule 24 (stmt)


State 80

    6 func_decl: INT IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list RBRACE .

    $default  reduce using rule 6 (func_decl)


State 81

    7 func_decl: VOID IDENTIFIER LPAREN param_list RPAREN LBRACE stmt_list RBRACE .

    $default  reduce using rule 7 (func_decl)


State 82

   26 if_stmt: IF LPAREN condition . RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   27        | IF LPAREN condition . RPAREN LBRACE stmt_list RBRACE

    RPAREN  shift, and go to state 87


State 83

   31 condition: expr . LT expr
   32          | expr . GT expr
   33          | expr . EQ expr
   34          | expr . NEQ expr
   35          | expr . LEQ expr
   36          | expr . GEQ expr
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    EQ     shift, and go to state 88
    NEQ    shift, and go to state 89
    LT     shift, and go to state 90
    GT     shift, and go to state 91
    LEQ    shift, and go to state 92
    GEQ    shift, and go to state 93


State 84

   28 while_stmt: WHILE LPAREN condition . RPAREN LBRACE stmt_list RBRACE

    RPAREN  shift, and go to state 94


State 85

   29 return_stmt: RETURN expr SEMICOLON .

    $default  reduce using rule 29 (return_stmt)


State 86

   25 assign_stmt: IDENTIFIER ASSIGN expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS       shift, and go to state 37
    MINUS      shift, and go to state 38
    SEMICOLON  shift, and go to state 95


State 87

   26 if_stmt: IF LPAREN condition RPAREN . LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   27        | IF LPAREN condition RPAREN . LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 96


State 88

   33 condition: expr EQ . expr

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 97
    term    go to state 26
    factor  go to state 27


State 89

   34 condition: expr NEQ . expr

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 98
    term    go to state 26
    factor  go to state 27


State 90

   31 condition: expr LT . expr

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 99
    term    go to state 26
    factor  go to state 27


State 91

   32 condition: expr GT . expr

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 100
    term    go to state 26
    factor  go to state 27


State 92

   35 condition: expr LEQ . expr

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 101
    term    go to state 26
    factor  go to state 27


State 93

   36 condition: expr GEQ . expr

    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24

    expr    go to state 102
    term    go to state 26
    factor  go to state 27


State 94

   28 while_stmt: WHILE LPAREN condition RPAREN . LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 103


State 95

   25 assign_stmt: IDENTIFIER ASSIGN expr SEMICOLON .

    $default  reduce using rule 25 (assign_stmt)


State 96

   26 if_stmt: IF LPAREN condition RPAREN LBRACE . stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   27        | IF LPAREN condition RPAREN LBRACE . stmt_list RBRACE

    $default  reduce using rule 18 (stmt_list)

    stmt_list  go to state 104


State 97

   33 condition: expr EQ expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38

    $default  reduce using rule 33 (condition)


State 98

   34 condition: expr NEQ expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38

    $default  reduce using rule 34 (condition)


State 99

   31 condition: expr LT expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38

    $default  reduce using rule 31 (condition)


State 100

   32 condition: expr GT expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38

    $default  reduce using rule 32 (condition)


State 101

   35 condition: expr LEQ expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38

    $default  reduce using rule 35 (condition)


State 102

   36 condition: expr GEQ expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38

    $default  reduce using rule 36 (condition)


State 103

   28 while_stmt: WHILE LPAREN condition RPAREN LBRACE . stmt_list RBRACE

    $default  reduce using rule 18 (stmt_list)

    stmt_list  go to state 105


State 104

   17 stmt_list: stmt_list . stmt
   26 if_stmt: IF LPAREN condition RPAREN LBRACE stmt_list . RBRACE ELSE LBRACE stmt_list RBRACE
   27        | IF LPAREN condition RPAREN LBRACE stmt_list . RBRACE

    INT         shift, and go to state 58
    FLOAT_TYPE  shift, and go to state 2
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    RETURN      shift, and go to state 61
    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 62
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24
    RBRACE      shift, and go to state 106

    var_decl     go to state 64
    stmt         go to state 65
    assign_stmt  go to state 66
    if_stmt      go to state 67
    while_stmt   go to state 68
    return_stmt  go to state 69
    expr         go to state 70
    term         go to state 26
    factor       go to state 27


State 105

   17 stmt_list: stmt_list . stmt
   28 while_stmt: WHILE LPAREN condition RPAREN LBRACE stmt_list . RBRACE

    INT         shift, and go to state 58
    FLOAT_TYPE  shift, and go to state 2
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    RETURN      shift, and go to state 61
    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 62
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24
    RBRACE      shift, and go to state 107

    var_decl     go to state 64
    stmt         go to state 65
    assign_stmt  go to state 66
    if_stmt      go to state 67
    while_stmt   go to state 68
    return_stmt  go to state 69
    expr         go to state 70
    term         go to state 26
    factor       go to state 27


State 106

   26 if_stmt: IF LPAREN condition RPAREN LBRACE stmt_list RBRACE . ELSE LBRACE stmt_list RBRACE
   27        | IF LPAREN condition RPAREN LBRACE stmt_list RBRACE .

    ELSE  shift, and go to state 108

    $default  reduce using rule 27 (if_stmt)


State 107

   28 while_stmt: WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE .

    $default  reduce using rule 28 (while_stmt)


State 108

   26 if_stmt: IF LPAREN condition RPAREN LBRACE stmt_list RBRACE ELSE . LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 109


State 109

   26 if_stmt: IF LPAREN condition RPAREN LBRACE stmt_list RBRACE ELSE LBRACE . stmt_list RBRACE

    $default  reduce using rule 18 (stmt_list)

    stmt_list  go to state 110


State 110

   17 stmt_list: stmt_list . stmt
   26 if_stmt: IF LPAREN condition RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list . RBRACE

    INT         shift, and go to state 58
    FLOAT_TYPE  shift, and go to state 2
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    RETURN      shift, and go to state 61
    NUMBER      shift, and go to state 20
    FLOAT_NUM   shift, and go to state 21
    IDENTIFIER  shift, and go to state 62
    MINUS       shift, and go to state 23
    LPAREN      shift, and go to state 24
    RBRACE      shift, and go to state 111

    var_decl     go to state 64
    stmt         go to state 65
    assign_stmt  go to state 66
    if_stmt      go to state 67
    while_stmt   go to state 68
    return_stmt  go to state 69
    expr         go to state 70
    term         go to state 26
    factor       go to state 27


State 111

   26 if_stmt: IF LPAREN condition RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE .

    $default  reduce using rule 26 (if_stmt)
